start queue and stuff

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "**/.hg": true,
         "**/.DS_Store": true,
         "**/bin/**": true,
-        "**/obj/**": true
+        "**/obj/**": true,
+        "**/.vs/**": true
     }
 }
