--- a/src/project.json
+++ b/src/project.json
@@ -4,14 +4,18 @@
     "debugType": "portable",
     "emitEntryPoint": true
   },
+  "dependencies": {
+    "Newtonsoft.Json": "8.0.3",
+    "StackExchange.Redis": "1.1.608"
+  },
   "frameworks": {
     "netcoreapp1.0": {
-      "dependencies": {
-        "Microsoft.NETCore.App": {
-          "type": "platform",
-          "version": "1.0.1"
-        }
-      },
+			"dependencies": {
+				"Microsoft.NETCore.App": {
+					"type": "platform",
+					"version": "1.0.1"
+				}
+			},
       "imports": "dnxcore50"
     }
   }
