--- a/src/project.json
+++ b/src/project.json
@@ -6,7 +6,8 @@
   },
   "dependencies": {
     "Newtonsoft.Json": "8.0.3",
-    "StackExchange.Redis": "1.1.608"
+			"StackExchange.Redis": "1.1.608",
+			"System.Runtime.Serialization.Primitives": "4.1.1"
   },
   "frameworks": {
     "netcoreapp1.0": {
