--- a/Lucid/project.json
+++ b/Lucid/project.json
@@ -5,7 +5,8 @@
 		"emitEntryPoint": true
 	},
 	"tools": {
-		"Microsoft.Dotnet.Watcher.Tools": "1.0.0-preview2-final"
+		"Microsoft.Dotnet.Watcher.Tools": "1.0.0-preview2-final",
+		"Microsoft.EntityFrameworkCore.Tools": "1.0.0-preview2-final"
 	},
 	"dependencies": {
 		"Newtonsoft.Json": "8.0.3",
@@ -15,7 +16,9 @@
 		"Npgsql": "3.1.8",
 		"System.Linq": "4.1.0",
 		"BCrypt.Net-Core": "1.1.0",
-		"Microsoft.Extensions.DependencyModel": "1.0.0-rc2-final"
+		"Microsoft.Extensions.DependencyModel": "1.0.0-rc2-final",
+		"Npgsql.EntityFrameworkCore.PostgreSQL": "1.0.2",
+		"Microsoft.EntityFrameworkCore.Design": "1.0.0-preview2-final"
 	},
 	"frameworks": {
 		"netcoreapp1.0": {
