--- a/Lucid.Web/package.json
+++ b/Lucid.Web/package.json
@@ -1,54 +1,56 @@
 {
-	"name": "Lucid.Web",
-	"version": "1.0.0",
-	"description": "",
-	"main": "webpack.config.js",
-	"scripts": {
-		"start": "npm run clean:dist && npm run copy:index && webpack-dev-server --content-base ./wwwroot --inline",
-		"wp:watch": "webpack --watch --config ./webpack.config.js",
-		"clean:dist": "rimraf ./wwwroot/*",
-		"copy:index": "cpx ./src/index.html ./wwwroot",
-		"generate:sdk": "ts-node ./generate-sdk.ts",
-		"lint": "tslint --exclude=node_modules/** **/*.ts"
-	},
-	"keywords": [],
-	"author": "Luke Autry <lukeautry@gmail.com> (http://www.lukeautry.com)",
-	"license": "ISC",
-	"dependencies": {
-		"@types/handlebars": "^4.0.31",
-		"@types/history": "^2.0.39",
-		"@types/material-ui": "^0.16.38",
-		"@types/node": "^6.0.46",
-		"@types/react": "^0.14.43",
-		"@types/react-dom": "^0.14.18",
-		"@types/react-router": "^2.0.38",
-		"@types/react-tap-event-plugin": "^0.0.30",
-		"@types/superagent": "^2.0.35",
-		"cpx": "^1.5.0",
-		"css-loader": "^0.25.0",
-		"extract-text-webpack-plugin": "beta",
-		"formsy-material-ui": "^0.5.2",
-		"formsy-react": "^0.18.1",
-		"handlebars": "^4.0.5",
-		"history": "^4.3.0",
-		"material-ui": "^0.16.1",
-		"mobx": "^2.6.0",
-		"mobx-react": "^3.5.8",
-		"node-sass": "^3.10.1",
-		"react": "^15.3.2",
-		"react-dom": "^15.3.2",
-		"react-router": "^3.0.0",
-		"react-tap-event-plugin": "^1.0.0",
-		"rimraf": "^2.5.4",
-		"sass-loader": "^4.0.2",
-		"style-loader": "^0.13.1",
-		"superagent": "^2.3.0",
-		"ts-loader": "^0.9.5",
-		"ts-node": "^1.6.1",
-		"tslint": "^3.15.1",
-		"tslint-react": "^1.1.0",
-		"typescript": "^2.0.6",
-		"webpack": "beta",
-		"webpack-dev-server": "^1.16.2"
-	}
+  "name": "Lucid.Web",
+  "version": "1.0.0",
+  "description": "",
+  "main": "webpack.config.js",
+  "scripts": {
+    "start": "npm run clean:dist && npm run copy:index && webpack-dev-server --content-base ./wwwroot --inline",
+    "wp:watch": "webpack --watch --config ./webpack.config.js",
+    "clean:dist": "rimraf ./wwwroot/*",
+    "copy:index": "cpx ./src/index.html ./wwwroot",
+    "generate:sdk": "ts-node ./generate-sdk.ts --baseApiUrl=http://localhost:5000",
+    "lint": "tslint --exclude=node_modules/** **/*.ts"
+  },
+  "keywords": [],
+  "author": "Luke Autry <lukeautry@gmail.com> (http://www.lukeautry.com)",
+  "license": "ISC",
+  "dependencies": {
+    "@types/handlebars": "^4.0.31",
+    "@types/history": "^2.0.41",
+    "@types/material-ui": "^0.16.44",
+    "@types/node": "^6.0.52",
+    "@types/react": "^0.14.55",
+    "@types/react-dom": "^0.14.19",
+    "@types/react-router": "^2.0.41",
+    "@types/react-tap-event-plugin": "0.0.30",
+    "@types/superagent": "^2.0.36",
+    "@types/yargs": "^6.3.3",
+    "cpx": "^1.5.0",
+    "css-loader": "^0.25.0",
+    "extract-text-webpack-plugin": "^2.0.0-beta.4",
+    "formsy-material-ui": "^0.5.2",
+    "formsy-react": "^0.19.0",
+    "handlebars": "^4.0.6",
+    "history": "^4.5.0",
+    "material-ui": "^0.16.5",
+    "mobx": "^2.7.0",
+    "mobx-react": "^3.5.9",
+    "node-sass": "^3.13.1",
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1",
+    "react-router": "^3.0.0",
+    "react-tap-event-plugin": "^2.0.1",
+    "rimraf": "^2.5.4",
+    "sass-loader": "^4.1.0",
+    "style-loader": "^0.13.1",
+    "superagent": "^2.3.0",
+    "ts-loader": "^0.9.5",
+    "ts-node": "^1.7.2",
+    "tslint": "^3.15.1",
+    "tslint-react": "^1.1.0",
+    "typescript": "^2.1.4",
+    "webpack": "^2.2.0-rc.1",
+    "webpack-dev-server": "^1.16.2",
+    "yargs": "^6.5.0"
+  }
 }
