really gotta start doing smaller commits

--- a/Lucid.Web/.editorconfig
+++ b/Lucid.Web/.editorconfig
@@ -4,10 +4,6 @@
 end_of_line = lf
 insert_final_newline = true
 
-[*.ts]
+[*.{ts,tsx,html,js,json}]
 indent_style = space
-indent_size = 2
-
-[*.html]
-index_style = space
 indent_size = 2
